add new[], delete[]

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 
 
 test: test.o memleak.o
-	g++ -o a.out $^ -Wl,--wrap=malloc -Wl,--wrap=free -Wl,--wrap=calloc -Wl,--wrap=realloc -Wl,--wrap=_Znwm -Wl,--wrap=_ZdlPv -lpthread
+	g++ -o a.out $^ -Wl,--wrap=malloc -Wl,--wrap=free -Wl,--wrap=calloc -Wl,--wrap=realloc -Wl,--wrap=_Znwm -Wl,--wrap=_ZdlPv -Wl,--wrap=_Znam -Wl,--wrap=_ZdaPv -lpthread
 
 clean:
 	@rm a.out memleak.o test.o
